<resources>
    <string name="app_name">Mijn Contacten</string>
    <string name="app_search_name">Zoek Vrienden</string>
    <string name="action_my_contacts">Mijn contacten</string>
    <string name="action_search_contacts">Zoek vrienden</string>
    <string name="labelName">Naam:</string>
    <string name="labelEmail">E-mailadres:</string>
    <string name="labelPhone">Telefoon nr.:</string>
    <string name="labelSell">Mobiel nr.:</string>
    <string name="labelAddress">Straat + Huisnr.:</string>
    <string name="labelZipCode">Postcode:</string>
    <string name="labelCity">Plaats:</string>
    <string name="menu_search">Zoeken...</string>
    <string name="contact_empty_list">U heeft nog geen contacten</string>
    <string name="add_random_users">Voeg random users toe</string>
    <string name="http_no_connection">Kan geen verbinding maken, probeer opnieuw of controller uw verbinding.</string>
</resources>